--- a/main.html
+++ b/main.html
@@ -10,7 +10,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<nav>
+		<a herf = "www.google.com">Home</a>
+		<a herf = "www.google.com">About us</a>
+		<a herf = "www.google.com">Contact us</a>
+	</nav>
+</div>
+<div>
+	<h2>3 random audios</h2>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+	</audio>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+	</audio>
+		<audio controls>
+			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+		</audio>
+</div>	
 </body>
 
 </html>
