--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 </script>
 <div>
 	<nav>
-		<a herf = "www.google.com">Home</a>
-		<a herf = "www.google.com">About us</a>
-		<a herf = "www.google.com">Contact us</a>
+		<a href = "www.google.com"> Home</a>
+		<a href = "www.google.com"> About us</a>
+		<a href = "www.google.com"> Contact us</a>
 	</nav>
 </div>
 <div>
